modified:   master/README 	modified:   master/main.c 	modified:   master/master.cfg 	modified:   src/nettcp/bo_cycle_arr.c 	modified:   src/nettcp/bo_cycle_arr.h 	modified:   src/nettcp/bo_net_master.c 	modified:   src/snmp/bo_snmp_mng.c 	modified:   test/botest/Makefile 	modified:   test/master/stress_1/main.c 	modified:   test/master/test_runners/Test_master_Runners.c 	renamed:    test/netroute/testroutenet.c -> test/master/testmaster.c 	deleted:    test/netroute/test_runners/Test_route_Runners.c 	deleted:    test/netroute/test_runners/all_tests.c

--- a/master/README
+++ b/master/README
@@ -1,4 +1,5 @@
 MASTER - хранение/прием/рассылка таблицы маршрутов, прием/хранение логов.
+
 master/
 master/build
 master/build/master  - испол файл
@@ -7,17 +8,78 @@ master/master.cfg    - конф-ый файл
 
 1 Компиляция
 =============
-1.1 В Makefile выбираем компилятор и библиотеки.
+1.1 В Makefile выбираем компилятор и библиотеки. (перем-ые CC и LDFLAGS)
 
 1.2 Компиляция, сборка, очистка. Результат в папке build 
     # make
     # make clean
 
 2 Запуск
-============ 
+============= 
     # ./master master.cfg
 
 3 Тестирование
 ==============
-1.1 test/master/stress_1 - Отправляет таблицу роутов 200 SET сообщ master'y. 
-                           Принимает Таблицу роутов, сравнивает с тем что отправил.     
+1.1 
+test/master/stress_1
+Цель:     Определить время необх для отправки/получении таблицы роутов. 
+
+Компиляция/Выполнение: 
+    #cd test/master/stress_1
+    #make
+    
+    #./stress
+
+Описание: Отправляет таблицу роутов 200 SET сообщ master'y. Принимает Таблицу 
+роутов в одном сообщении, сравнивает с тем что отправил. 
+
+Для работы необход запущенный сервер, не имеющий других подключений. 
+IP адрес сервера указ в файле main.c переменная ip_master.
+
+
+
+SCREENSHOT:
+               
+>SEND send N pack[200]time:[7.959485]  ... OK            
+    
+    pack[200] - кол-во отправ пакетов
+    time[сек.микросек]    - время затр. на отправку всех пакетов
+
+RECV N pack[1]time:[0.000458] 
+    pack[]    - кол-во прин пакетов
+    time[]    - время затр. на приём пакетов  
+
+                           
+1.2  
+test/master/testmaster.c            - исход тестов
+test/master/Test_master_Runners.c   - список тестов
+test/botest/make master             - запуск тестов
+
+
+4 Алгоритм 
+===================
+    КА     - конечный автомат
+    клиент - moxa UC7110 
+
+                                Инициализация 
+        | bo_master_main()  --> list_in, list_out списки хран сокеты клиентов,
+        | bo_net_master.c       макс длина списка = max_connect(master.cfg) | или
+        |                       default  = 250(m_readConfig)
+        |                       
+        |                       recvBuf - приемный буфер, макс размер опред 
+        |                       макросом BO_MAX_TAB_BUF(bo_net_master_core.h)
+        |                       
+        |                       tab_routes - таблица роутов(хэш табл)
+        |                       хранит значение: key адрес устр RS-485
+        |                                        value ip:port(1|2 на moxa)
+        |
+        |                       logArr - таблица хран логи ПР 
+        |                       макс значение = max_size(master.cfg) | 
+        |                       default = 1024(m_readConfig)
+        |________________________
+        |
+        |
+        |
+         --> m_servWork()   
+         
+
