modified:   master/README

--- a/master/README
+++ b/master/README
@@ -31,7 +31,7 @@ test/master/stress_1
     #./stress
 
 Описание: Отправляет таблицу роутов 200 SET сообщ master'y. Принимает Таблицу 
-роутов в одном сообщении, сравнивает с тем что отправил. 
+роутов в одном сообщение, сравнивает с тем что отправил. 
 
 Для работы необход запущенный сервер, не имеющий других подключений. 
 IP адрес сервера указ в файле main.c переменная ip_master.
